Improve user manual (options)

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -42,6 +42,21 @@
 }
 
 
+@inproceedings{ACE14,
+	author = {Andr{\'e}, {\'E}tienne and Coti, Camille and Evangelista, Sami},
+	title = {Distributed Behavioral Cartography of Timed Automata},
+	booktitle = {21st European {MPI} Users' Group Meeting ({EuroMPI/ASIA'14})},
+	doi = {10.1145/2642769.2642784},
+	editor = {Dongarra, Jack and Ishikawa, Yutaka and Atsushi, Hori},
+	location = {Kyoto, Japan},
+	month = sep,
+	pages = {109--114},
+	publisher = {ACM},
+	url = {http://lipn.univ-paris13.fr/~andre/documents/distributed-behavioral-cartography-of-timed-automata.pdf},
+	year = {2014},
+}
+
+
 @article{ACEF09,
 	author =	{Andr{\'e}, {\'E}tienne and Chatain, Thomas and Encrenaz, Emmanuelle and Fribourg, Laurent},
 	DOI =	{10.1142/S0129054109006905},
@@ -77,8 +92,21 @@
 }
 
 
+@inproceedings{ACN15,
+	author = {Andr{\'e}, {\'E}tienne and Coti, Camille and Nguyen, Hoang Gia},
+	title = {Enhanced Distributed Behavioral Cartography of Parametric Timed Automata},
+	booktitle = {ICFEM 15},
+	location = {Paris, France},
+	month = nov,
+	publisher = {Springer},
+	series    = {Lecture Notes in Computer Science},
+	year = {2015},
+}
+	editor = {},
+
+
 @inproceedings{AF10,
-  	address =	{Brno, Czech Republic},
+  	location =	{Brno, Czech Republic},
   	author =	{Andr{\'e}, {\'E}tienne and Fribourg, Laurent},
   	booktitle =	{{P}roceedings of the 4th {W}orkshop on {R}eachability {P}roblems in {C}omputational {M}odels ({RP}'10)},
   	DOI =	{10.1007/978-3-642-15349-5_5},
@@ -114,21 +142,37 @@
 }
 
 
-@inproceedings{AFS12,
-  	address =	{Norfolk, Virginia, USA},
+@inproceedings{AFS13atva,
   	author =	{Andr\'e, {\'E}tienne and Fribourg, Laurent and Soulat, Romain},
-  	booktitle =	{{P}roceedings of the 4th {NASA} {F}ormal {M}ethods {S}ymposium ({NFM}'12)},
- 	DOI =	{10.1007/978-3-642-28891-3_10}, 
- 	editor =	{Goodloe, Alwyn and Person, Suzette},
-  	month =	apr,
-	pages =	{100-105}, 
+  	booktitle =	{{P}roceedings of the 11th International Symposium on Automated Technology for Verification and Analysis ({ATVA}'13)},
+ 	editor =	{Hung, Dang-Van and Ogawa, Mizuhito},
+ 	location = {Hanoi, Vietnam},
+  	month =	oct,
+  	pages =	{381-396},
 	publisher =	{Springer},
   	series =	{Lecture Notes in Computer Science},
-  	title =	{Enhancing the Inverse Method with State Merging},
-  	url =	{http://www.lsv.ens-cachan.fr/Publis/PAPERS/PDF/AFS-nfm12.pdf},
-  	volume =	{7226}, 
-  	year =	{2012},
-   	lipn-category = "intc",
+  	title =	{Merge and Conquer: State Merging in Parametric Timed Automata},
+  	url = {http://lipn.univ-paris13.fr/~andre/documents/merge-and-conquer-state-merging-in-parametric-timed-automata.pdf},
+  	volume =	{8172},
+  	year =	{2013},
+   	lipn-category = {intc},
+  	keywords = {intc},
+}
+
+
+@inproceedings{AHHKLLP13,
+	author = {Andr\'e, {\'E}tienne and Hillah, Lom-Messan and Hulin-Hubard, Francis and Kordon, Fabrice and Lembachar, Yousra and Linard, Alban and Petrucci, Laure},
+	booktitle = {18th IEEE International Conference on Engineering of Complex Computer Systems ({ICECCS}'13)},
+  	doi = {10.1109/ICECCS.2013.15},
+  	editor = {Liu, Yang and Martin, Andrew},
+	location = {Singapore},
+	month = jul,
+	pages     = {33-36},
+	publisher = {IEEE Computer Society},
+	title = {{CosyVerif}: An Open Source Extensible Verification Environment},
+	url = {http://lipn.univ-paris13.fr/~andre/documents/CosyVerif-an-Open-Source-Extensible-Verification-Environment.pdf},
+	year = {2013},
+   	lipn-category = {intc},
   	keywords = {intc},
 }
 
@@ -148,6 +192,21 @@
 } 
 
 
+@inproceedings{ALNS15,
+	author = {Andr{\'e}, {\'E}tienne and Lipari, Giuseppe and Nguyen, Hoang Gia and Sun, Youcheng},
+	title = {Reachability Preservation Based Parameter Synthesis for Timed Automata},
+	booktitle = {Proceedings of the 7th NASA Formal Methods Symposium (NFM'15)},
+	doi = {10.1007/978-3-319-17524-9_5},
+	editor = {Havelund, Klaus and Holzmann, Gerard and Joshi, Rajeev},
+	location = {Pasadena, CA, USA},
+	month = apr,
+	publisher = {Springer},
+	pages = {50--65},
+	volume = {9058},
+	series    = {Lecture Notes in Computer Science},
+	year = {2015},
+}
+
 
 @inproceedings{AM02,
   	acronym =	{{TACAS}'02},
@@ -163,6 +222,38 @@
   	year =	{2002},
 }
 
+
+@inproceedings{AM15,
+	author = {Andr{\'e}, {\'E}tienne and Markey, Nicolas},
+	title = {Language Preservation Problems in Parametric Timed Automata},
+	booktitle = {Proceedings of the 13th International Conference on Formal Modeling and Analysis of Timed Systems (FORMATS'15)},
+	editor = {Sankaranarayanan, Sriram and Vicario, Enrico},
+	location = {Madrid, Spain},
+	month = sep,
+	publisher = {Springer},
+	series    = {Lecture Notes in Computer Science},
+	year = {2015},
+	lipn-category = {intc},
+	keywords = {intc},
+}
+
+
+@inproceedings{Andre13FSFMA,
+	author = {Andr{\'e}, {\'E}tienne},
+	booktitle = {1st French Singaporean Workshop on Formal Methods and Applications ({FSFMA}'13)},
+  	editor = {Choppy, Christine and Sun, Jun},
+	location = {Singapore},
+	month = jul,
+	pages = {18-31},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f\"ur Informatik, Dagstuhl Publishing},
+	series = {OpenAccess Series in Informatics (OASIcs)},
+	title = {Dynamic Clock Elimination in Parametric Timed Automata},
+	url = {http://lipn.univ-paris13.fr/~andre/documents/dynamic-clock-elimination-in-parametric-timed-automata.pdf},
+	volume = {31},
+	year = {2013},
+   	lipn-category = {intc},
+  	keywords = {intc},
+}
 
 @inproceedings{Andre13ICECCS,
 	author = {André, Étienne},
@@ -225,6 +316,28 @@
 }
 
 
+@inproceedings{HHW95,
+	author    = {Thomas A. Henzinger and
+				Pei-Hsin Ho and
+				Howard Wong-Toi},
+	title     = {A User Guide to {HyTech}},
+	booktitle = {TACAS'95},
+	pages     = {41-71},
+	ee        = {http://dx.doi.org/10.1007/3-540-60630-0_3},
+	editor    = {Ed Brinksma and
+				Rance Cleaveland and
+				Kim Guldstrand Larsen and
+				Tiziana Margaria and
+				Bernhard Steffen},
+	publisher = {Springer},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {1019},
+	year      = {1995},
+	isbn      = {3-540-60630-0},
+	bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
  @misc{imitator,
   	author =	{{IMITATOR Team}},
   	number =	{v2.6},
@@ -243,6 +356,19 @@
 	year = 2015,
 	Note = "To appear."
 }
+
+
+@inproceedings{JM09,
+	author =    {Jeannet, Bertrand and Min\'e, Antoine},
+	title =     {Apron: A Library of Numerical Abstract Domains for Static Analysis},
+	pages =     {661--667},
+	volume =    {5643},
+	year =      {2009},
+	booktitle = {CAV'09},
+	series =    {LNCS},
+	publisher = {Springer},
+}
+
 
 
 @inproceedings{Markey11,
